correction commit for github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="features container">
-            <div class="yelpcat__feat feats__row row">
+            <div class="yelpcat feats__row row">
                 <h4 class="heading__features">YelpCat - <span class="heading__features--sub">A Yelp-like clone for animal adoption</span></h4>
                 <div class="app-about__heading col-md-6">
                 <p class="about-app">I started making this app because I love animals and am not completely happy with the adoption sites out there. This is just the framework and is a passion project/work-in progress. UI is just the framework. <span class="note">*note, this is on the free tier of Heroku and may take a bit longer to load as a result</span></p>
@@ -74,7 +74,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="saplants__feat feats__row row">
+            <div class="saplants feats__row row">
                 <h4 class="heading__features">Saplants - <span class="heading__features--sub">A plant subscription box landing page demo</span></h4>
                 <div class="img col-md-6">
                 <p class="about-app">A demo page focused on visuals with basic funtion that uses pure SASS/CSS</p>
@@ -97,7 +97,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="mtg__feat feats__row row">
+            <div class="mtg feats__row row">
                 <h4 class="heading__features">Magic the Gathering score keeper - <span class="heading__features--sub">A score keeper for MtG</span></h4>
                 <div class="img col-md-6">
                 <p class="about-app">This app was created because I found it cumbersome to play the game using the standard 3-sided die to count lives.</p>
