about me copy change

--- a/about-me.html
+++ b/about-me.html
@@ -40,8 +40,8 @@
     </nav>
 <header id="h-about">
         <h1>About Me <span class="heading__sub">Look, I learned some things!</span></h1>
-        <p class="header__content">Hi, my name is Sarah! I started my coding journey when I was in elementary school learning basic HTML (thanks Dad!) but
-            that's pretty much where it stopped until 2020 when I pushed myself to pick it back up again. This is my victory page where I put all the cool (and sometimes not so cool) things I've made.</p>
+        <p class="header__content"><span class="welcome">Hi, my name is Sarah!</span> I am a self-taught full-stack developer with a passion for user experience. Though I am self-taught, I took no shortcuts - starting with the fundamentals (e.g. HTML5, CSS3, & JavaScript) before advancing to frameworks and libraries.
+                </p>
 </header>
 <main>
     <div class="container learning-container">
