about me button add

--- a/about-me.html
+++ b/about-me.html
@@ -40,10 +40,14 @@
     </nav>
 <header id="h-about">
         <h1>About Me <span class="heading__sub">Look, I learned some things!</span></h1>
-        <p class="header__content"><span class="welcome">Hi, my name is Sarah!</span> I am a self-taught full-stack developer with a passion for user experience. Though I am self-taught, I took no shortcuts - starting with the fundamentals (e.g. HTML5, CSS3, & JavaScript) before advancing to frameworks and libraries.
-                </p>
+        <p class="header__content"><span class="welcome">Hi, my name is Sarah!</span> I am a self-taught full-stack developer with a passion for user experience. Though I am self-taught, I took no shortcuts - starting with the fundamentals (e.g. HTML5, CSS3, & JavaScript) before advancing to frameworks and libraries.</p>
+        <div class="buttons row justify-content-center">
+            <div class="button btn--main col-md-4"><a href="https://www.linkedin.com/in/sloutrel"" class="btn">Connect on LinkedIn</a></div>
+            <div class="button btn--sub col-md-4"><a href="https://github.com/sloutrel"" class="btn">See my source code</a></div>
+        </div>
 </header>
 <main>
+    <h2 class="heading__secondary">Completed courses and competencies</h2>
     <div class="container learning-container">
         <div class="row align-items-start justify-content-center row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 learning-row">
             <div class="col card">
