--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix='og: http://ogp.me/ns#'>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah's Portfolio</title>
+    <meta property='og:title' content="Sarah's Portfolio">
+
+<meta property='og:image' content='http://sloutrel.github.io/imgs/portfolio-feat.svg'>
+<meta property='og:description' content='A collection of apps'>
+<meta property='og:url' content='http://sloutrel.github.io'>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Montserrat:wght@100;200;300;400;600&family=Quicksand:wght@300;400&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,400&display=swap" rel="stylesheet">
