--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" prefix='og: http://ogp.me/ns#'>
+<html lang="en" prefix="og: https://ogp.me/ns#">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <title>Sarah's Portfolio</title>
     <meta property='og:title' content="Sarah's Portfolio">
 
-<meta property='og:image' content='http://sloutrel.github.io/imgs/portfolio-feat.svg'>
+<meta property='og:image' content='https://images.unsplash.com/photo-1522199755839-a2bacb67c546?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'>
 <meta property='og:description' content='A collection of apps'>
 <meta property='og:url' content='http://sloutrel.github.io'>
 
