meta data description

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Sarah's Portfolio</title>
     <meta property='og:title' content="Sarah's Portfolio">
 
-<meta property='og:image' content='https://images.unsplash.com/photo-1522199755839-a2bacb67c546?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'>
-<meta property='og:description' content='A collection of apps'>
+<meta property='og:image' content='http://sloutrel.github.io/imgs/portfolio-feat.svg'>
+<meta property='og:description' content='A collection of apps ranging from large to small using Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
 <meta property='og:url' content='http://sloutrel.github.io'>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
