--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sarah's Portfolio</title>
     <meta property='og:title' content="Sarah's Portfolio">
 
-<meta property='og:image' content='https://sloutrel.github.io/imgs/portfolio-feat.jpg'>
+<meta property='og:image' content='https://sloutrel.github.io/imgs/portfolio-feat-1.jpg'>
 <meta property='og:description' content='A collection of apps ranging from large to small using Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
 <meta property='og:url' content='http://sloutrel.github.io'>
 
