new skills and kaboom app

--- a/about-me.html
+++ b/about-me.html
@@ -42,8 +42,8 @@
         <h1>About Me <span class="heading__sub">Look, I learned some things!</span></h1>
         <p class="header__content"><span class="welcome">Hi, my name is Sarah!</span> I am a self-taught full-stack developer with a passion for user experience. Though I am self-taught, I took no shortcuts - starting with the fundamentals (e.g. HTML5, CSS3, & JavaScript) before advancing to frameworks and libraries.</p>
         <div class="buttons row justify-content-center">
-            <div class="button btn--main col-md-4"><a href="https://www.linkedin.com/in/sloutrel"" class="btn">Connect on LinkedIn</a></div>
-            <div class="button btn--sub col-md-4"><a href="https://github.com/sloutrel"" class="btn">See my source code</a></div>
+            <div class="button btn--main col-md-4"><a href="https://www.linkedin.com/in/sloutrel" target="__blank" class="btn">Connect on LinkedIn</a></div>
+            <div class="button btn--sub col-md-4"><a href="https://github.com/sloutrel" target="__blank" class="btn">See my source code</a></div>
         </div>
 </header>
 <main>
@@ -57,6 +57,8 @@
                         <li class="list-item"><a href="https://www.javascript.com/" target="__blank">Javascript</a></li>
                         <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noopener noreferrer">HTML5 </a></li>
                         <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noopener noreferrer">Responsive CSS3</a></li>
+                        <li class="list-item"><a href="https://www.typescriptlang.org/" target="_blank" rel="noopener noreferrer">Typescript</a></li>
+                        <li class="list-item"><a href="https://www.ruby-lang.org/en/" target="_blank" rel="noopener noreferrer">Ruby</a></li>
                     </ul>
                 </div>
             </div>
@@ -69,6 +71,7 @@
                         <li class="list-item"><a href="https://getbootstrap.com/" target="_blank" rel="noopener noreferrer">Bootstrap</a></li>  
                         <li class="list-item"><a href="https://sass-lang.com/" target="_blank" rel="noopener noreferrer">SASS</a></li>  
                         <li class="list-item"><a href="https://nodejs.org/" target="_blank" rel="noopener noreferrer">Node.js</a> & <a href="https://www.npmjs.com/" target="_blank" rel="noopener noreferrer">npm</a> </li>
+                        <li class="list-item"><a href="https://kaboomjs.org/" target="_blank" rel="noopener noreferrer">Kaboom.js</a></li>
                     </ul>
                 </div>
             </div>
@@ -82,6 +85,10 @@
                         <li class="list-item"><a href="https://www.heroku.com/" target="_blank" rel="noopener noreferrer">Heroku</a></li>
                         <li class="list-item"><a href="https://agilemanifesto.org/" target="_blank" rel="noopener noreferrer">Agile / Scrum</a></li>
                         <li class="list-item"><a href="http://www.passportjs.org/docs/authenticate/" target="_blank" rel="noopener noreferrer">Auth - Hashing & Salting</a></li>
+                        <li class="list-item"><a href="http://www.figma.com" target="_blank" rel="noopener noreferrer">Figma</a></li>
+                        <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API" target="_blank" rel="noopener noreferrer">Canvas API</a></li>
+                        <li class="list-item"><a href="https://axios-http.com/docs/intro" target="_blank" rel="noopener noreferrer">Axios</a> & <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/AJAX/" target="_blank" rel="noopener noreferrer">AJAX</a> </li>
+                        <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API" target="_blank" rel="noopener noreferrer">Canvas API</a></li>
                     </ul>
                 </div>
             </div>
@@ -89,7 +96,9 @@
                 <h3 class="learning-categories text-center card-title">Currently learning</h3>
                 <div class="card-body">
                     <ul class="list"> 
-                        <li class="list-item"><a href="https://www.typescriptlang.org/" target="_blank" rel="noopener noreferrer">Typescript</a></li>
+                        <li class="list-item"><a href="https://reactnative.dev/" target="_blank" rel="noopener noreferrer">React Native</a></li>
+                        <li class="list-item"><a href="https://redux.js.org/" target="_blank" rel="noopener noreferrer">Redux</a></li>
+                        <li class="list-item"><a href="https://rubyonrails.org/" target="_blank" rel="noopener noreferrer">Ruby on Rails</a></li>
                         <li class="list-item"><a href="https://www.postman.com/" target="_blank" rel="noopener noreferrer">Postman</a></li>
                     </ul>
                 </div>
