add google analytics

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah's Portfolio</title>
     <meta property='og:title' content="Sarah's Portfolio">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F3Q5ENR64N"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-<meta property='og:image' content='https://sloutrel.github.io/imgs/portfolio-feat-1.jpg'>
-<meta property='og:description' content='A collection of apps ranging from large to small using Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
-<meta property='og:url' content='http://sloutrel.github.io'>
+        gtag('config', 'G-F3Q5ENR64N');
+    </script>
+
+    <meta property='og:image' content='https://sloutrel.github.io/imgs/portfolio-feat-1.jpg'>
+    <meta property='og:description' content='A collection of apps ranging from large to small using Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
+    <meta property='og:url' content='http://sloutrel.github.io'>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
