meta data changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarah's Portfolio</title>
+    <title>Sarah's Portfolio - Home</title>
     <meta property='og:title' content="Sarah's Portfolio">
     <meta property='og:image' content='https://sloutrel.github.io/imgs/portfolio-feat-1.jpg'>
     <meta property='og:description' content='A collection of apps ranging from large to small using Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
