--- a/about-me.html
+++ b/about-me.html
@@ -99,6 +99,7 @@
                         <li class="list-item"><a href="http://www.figma.com" target="_blank" rel="noopener noreferrer">Figma</a></li>
                         <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API" target="_blank" rel="noopener noreferrer">Canvas API</a></li>
                         <li class="list-item"><a href="https://axios-http.com/docs/intro" target="_blank" rel="noopener noreferrer">Axios</a> & <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/AJAX/" target="_blank" rel="noopener noreferrer">AJAX</a> </li>
+                        <li class="list-item"><a href="https://analytics.google.com/analytics/web/" target="_blank" rel="noopener noreferrer">Google Analytics</a> </li>
                     </ul>
                 </div>
             </div>
