--- a/about-me.html
+++ b/about-me.html
@@ -83,6 +83,7 @@
                         <li class="list-item"><a href="https://sass-lang.com/" target="_blank" rel="noopener noreferrer">SASS</a></li>  
                         <li class="list-item"><a href="https://nodejs.org/" target="_blank" rel="noopener noreferrer">Node.js</a> & <a href="https://www.npmjs.com/" target="_blank" rel="noopener noreferrer">npm</a> </li>
                         <li class="list-item"><a href="https://kaboomjs.org/" target="_blank" rel="noopener noreferrer">Kaboom.js</a></li>
+                        <li class="list-item"><a href="https://jquery.com/" target="_blank" rel="noopener noreferrer">jQuery</a></li>
                     </ul>
                 </div>
             </div>
@@ -94,6 +95,7 @@
                         <li class="list-item"><a href="https://www.mongodb.com/" target="_blank" rel="noopener noreferrer">Mongo DB Atlas</a> & <a href="https://mongoosejs.com/" target="_blank" rel="noopener noreferrer">Mongoose</a></li>
                         <li class="list-item"><a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer">Git</a> & <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Github</a></li>
                         <li class="list-item"><a href="https://www.heroku.com/" target="_blank" rel="noopener noreferrer">Heroku</a></li>
+                        <li class="list-item"><a href="https://vercel.com//" target="_blank" rel="noopener noreferrer">Vercel</a></li>
                         <li class="list-item"><a href="https://agilemanifesto.org/" target="_blank" rel="noopener noreferrer">Agile / Scrum</a></li>
                         <li class="list-item"><a href="http://www.passportjs.org/docs/authenticate/" target="_blank" rel="noopener noreferrer">Auth - Hashing & Salting</a></li>
                         <li class="list-item"><a href="http://www.figma.com" target="_blank" rel="noopener noreferrer">Figma</a></li>
@@ -107,6 +109,7 @@
                 <h3 class="learning-categories text-center card-title">Currently learning</h3>
                 <div class="card-body">
                     <ul class="list"> 
+                        <li class="list-item"><a href="https://nextjs.org/" target="_blank" rel="noopener noreferrer">Next.js</a></li>
                         <li class="list-item"><a href="https://reactnative.dev/" target="_blank" rel="noopener noreferrer">React Native</a></li>
                         <li class="list-item"><a href="https://redux.js.org/" target="_blank" rel="noopener noreferrer">Redux</a></li>
                         <li class="list-item"><a href="https://rubyonrails.org/" target="_blank" rel="noopener noreferrer">Ruby on Rails</a></li>
@@ -127,6 +130,8 @@
             <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/responsive-web-design" target ="_blank">Responsive Web Design - FCC</a>
             </li>
             <li><a href="https://www.udemy.com/certificate/UC-adbe38b5-927d-4145-b313-839401ae5d24/" target ="_blank">Agile Scrum Mastery - Udemy</a>
+            </li>
+            <li><a href="https://github.com/publiclab" target ="_blank">Open Source Contributor - Public Lab Spectral Workbench, 2021. Ruby testing data.</a>
             </li>
         </ul>
     </div>
