--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
         <script src="cards.js"></script>
-        <script src="cards-2.js"></script>
+        <!-- <script src="cards-2.js"></script> -->
 </body>
 
 </html>
